# elven-chewing

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.claude/: settings.local.json
.forgejo/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.forgejo/workflows/: ci.yml
.github/actions/prepare-libchewing/: action.yml
.github/workflows/: ci.yml  nightly.yml  pages.yml  release.yml
crates/chewing_engine_kit/: Cargo.toml
crates/chewing_engine_kit/src/: keysim.rs  lib.rs
crates/chewing_engine_kit/tests/: golden_traces.rs  smoke.rs
crates/chewing_tip_core/: Cargo.toml
crates/chewing_tip_core/src/: config.rs  diagnostics.rs  lib.rs  shell.rs
crates/chewing_tip_core/src/ipc/: client.rs  messages.rs  named_pipe.rs  varlink.rs
crates/chewing_tip_host/src/: ipc.rs  ui_elements.rs  update.rs
crates/chewing_tip_host/src/ui/: event_loop.rs  window.rs
crates/chewing_tip_host/src/ui_elements/: candidate_list.rs  dual_preview.rs  notification.rs
crates/chewing_tip_host/src/update/: config.rs  releases.rs
crates/elven_config/: Cargo.toml
crates/elven_config/src/: main.rs
crates/tsfreg/src/: main.rs
crates/web_demo/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  vite.config.js
crates/web_demo/src/: lib.rs
crates/web_demo/static/: index.html
design/: ci-self-hosted-runner.md
design/elven-glyphs/: gen.py
docs/development/: hot_reload_testing.md  self_update_design.md
installer/: version.json  version.wxi  windows-chewing-tsf.wxs
patches/: libchewing-fuzzy-partial-prefix-down.patch
tip/: Cargo.toml
tip/rc/: ChewingTextService.rc  resource.h  version.rc
tip/src/: com.rs  logging.rs
tip/src/text_service/: chewing.rs  edit_session.rs  mod.rs  resources.rs
tip/src/text_service/ui_elements/: dual_preview.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: branding.rs  download.rs  installer.rs  main.rs  version.rs
