[workspace]
resolver = "3"
members = [
  "crates/chewing_engine_kit",
  "crates/chewing_tip_core",
  "crates/chewing_tip_host",
  "crates/tsfreg",
  "crates/web_demo",
  "tip",
  "xtask"
]

[workspace.package]
version = "1.0.0"

[workspace.dependencies]
anyhow = "1"
chewing = "0.13.0-alpha.1"
exn = "0.3.0"
interprocess = "2.4.1"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"

[profile.release]
debug = true
lto = "thin"
panic = "abort"

# Local patch: pending upstream PR for FuzzyPartialPrefix + Down arrow
# (see ../libchewing-fix-cb branch fix/fuzzy-partial-prefix-select-with-down).
# Remove this block once the fix is released on crates.io.
[patch.crates-io]
chewing = { path = "../libchewing-fix-cb" }
